<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_geocoder_available">Geocode not available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="detect_my_location">Detect My Location</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="login">Login</string>
    <string name="loginPhone">Login Phone Number</string>
    <string name="login_text">One-time login with the primary phone number</string>
    <string name="text_login_with_phone">Login with phone number</string>
    <string name="text_login_auth_success">"Authentication successful"</string>
    <string name="app_name">Mobiezy</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_support">Support</string>
    <string name="menu_notification">Notification</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">Music</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">Act Cable</string>
    <string name="backdrop_subtitle">Everywhere in Bangalore</string>
    <string name="subscription_unsubscribe">Unsubcribe</string>
    <string name="subscription_view">View</string>
    <string name="type_cabletv">CABLE TV</string>
    <string name="type_interet">INTERNET</string>
    <string name="manage_services">Manage Services</string>
    <string name="current_plan">Current Plan</string>
    <string name="due_date">Due Date</string>
    <string name="total_payment_due">Total Payment Due</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="languageselected">Language Selected</string>
    <string name="termsconditions">Terms and Conditions</string>
    <string name="copyrightpolicy">Copyright Policy</string>
    <string name="aboutus">About us</string>
    <string name="saralseva">Saral Seva</string>
    <string name="versionnumber">Version 1.0</string>
    <string name="language_prompt">Choose a language</string>
    <string-array name="language_arrays">
        <item name="ENGLISH">ENGLISH</item>
        <item name="Hindi">HINDI</item>
        <item name="Kannada">KANNADA</item>

    </string-array>
    <string name="title_activity_cust_support">CustSupportActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="submit">Submit</string>
    <string name="comments">Comments</string>
    <string name="network_info">Network Info</string>
    <string name="network_unavailable">You are not connected to internet</string>
    <string name="ticket_no">Ticket No</string>
    <string name="there_are_no_vendors_currently_subscribed">There are no vendors currently subscribed</string>
    <string name="issue">Issue</string>
    <string name="completed">COMPLETED</string>
    <string name="support">Support</string>
    <string name="bill_details">Bill Details</string>
    <string name="pay">Pay</string>
    <string name="plan_details">Plan Details</string>
    <string name="vendor_no_online_payment">This vendor does not provide online payment</string>
    <string name="online_payment">Online Payment</string>
    <string name="location_refresh">Location Refreshed..</string>
    <string name="location_detection_error">Looks like there is no Network</string>
    <string name="no_plans_available">No Plans Available</string>
    <string name="no_complaints_available">No Open Complaints</string>
    <string name="bill_history">Bill History</string>
    <string name="payment">Payment</string>
    <string name="customer_support">Customer Support</string>
    <string name="new_complaint">New Complaint</string>
    <string name="registered_complaint">Registered Complaint</string>
    <string name="feedback_error">Problem in Sharing Feedback</string>
    <string name="feedback_success">Thanks for Feedback</string>
    <string name="feedback_sharing">Sharing feedback..</string>
    <string name="message_ok">OK</string>
    <string name="complaints_title_new">New Complaint</string>
    <string name="complaints_title_lodged">Lodged Complaints</string>
    <string name="message_gps_setting">GPS settings</string>
    <string name="message_gps_msg">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="message_settings_btn">Settings</string>
    <string name="message_setting_cancel">Cancel</string>
    <string name="message_fetching">Fetching data, Please wait...</string>
    <string name="message_getting">Getting your data..</string>
    <string name="pay_message">You have already selected  payment option</string>
    <string name="message_string_cancell">Cancel</string>
    <string name="pay_message_enable">Press Ok to enable online payment for this vendor</string>
    <string name="complaint_internet1">Not able to use internet</string>
    <string name="complaint_internet2">Slow Speed</string>
    <string name="complaint_internet3">Router Configuration</string>
    <string name="complaint_payment1">Online payment errors</string>
    <string name="complaint_payment2">Enquiry about Payment Modes</string>
    <string name="complaint_payment3">Payment Receipt Request</string>
    <string name="complaint_billing1">Billing Query</string>
    <string name="complaint_billing2">Bill Receipt</string>
    <string name="complaint_register_success">Complaint registered</string>
    <string name="complaint_register_failure">Complaint not registered</string>
    <string name="message_loading_complaint">Registering your complaint</string>
    <string name="complaint_billing3">Bill Correction</string>
    <string name="complaint_type_service">Service</string>
    <string name="complaint_type_billing">Billing</string>
    <string name="complaint_type_payment">Payment</string>
    <string name="complaint_rate">RATE</string>
    <string name="complaint_status">Status</string>
    <string name="complaint_issue">Issue</string>
    <string name="complaint_getting">Getting your complaints</string>
    <string name="your_subscriptions">Your Subscriptions</string>
    <string name="transaction_id">ID</string>
    <string name="payment_mode">Mode</string>
    <string name="banner_ad_unit_id">ca-app-pub-2023478389400445/6277969419</string>
    <string name="bill_current_balance">Current Balance</string>
    <string name="history">History</string>
    <string name="bill_set_up_box_number">Set Top Box Number</string>
    <string name="bill_current_plan">Current Plan</string>
    <string name="bill_prev_due">Prev Due</string>
    <string name="bill_tax">Tax</string>
    <string name="bill_total">Total</string>
    <string name="bill_last_collected_amount">Last Collected Amount</string>
    <string name="bill_last_collected_date">Last Collected Date</string>
    <string name="title_request_plan">Request for the plan</string>
    <string name="desc_requestplan">Do you want to request for this plan?</string>
    <string name="toast_success_request">Plan request successful</string>
    <string name="toast_failure_requestplan">Plan request unsuccessful</string>
    <string name="dialog_prompt_wait">Please wait..</string>
    <string name="label_profile_name">Name</string>
    <string name="label_profile_gender">Gender</string>
    <string name="label_profile_dob">Date of Birth</string>
    <string name="label_profile_phone">Phone Number</string>
    <string name="label_profile_address">Address</string>
    <string name="label_profile_aadhar">Aadhar Card Number</string>
    <string name="label_profile_personal">Personal Details</string>
    <string name="label_profile_basic">Basic Details</string>
    <string name="alert_header_internet">Internet Connection</string>
    <string name="alert_desc_internet">Looks like there is no network</string>
    <string name="toast_blank_amount">Please enter the amount</string>
    <string name="toast_success_save">Data Saved</string>
    <string name="dialog_saving">Saving data</string>
    <string name="edittext_hint_mobile_num">Enter mobile number</string>
    <string name="label_support_faulty_box">Faulty Set top box</string>
    <string name="label_support_no_channel">No channels shown</string>
    <string name="label_support_channel_unavailable">Few channels not coming</string>
    <string name="label_support_channel_stuck">Channel getting struck</string>
    <string name="label_support_audio">Audio issues</string>
    <string name="label_support_bad_quality">Bad quality picture</string>
    <string name="label_support_remote_issue">Remote control issue</string>
    <string name="label_support_channel_hd">HD channels not shown</string>
    <string name="label_support_others">Other</string>
    <string name="label_support_payment_refelction">Last months payment not reflecting</string>
    <string name="label_support_payment_rejection">"Rejecting online payment "</string>
    <string name="label_support_balance_wrong">Wrong balance amount shown</string>
    <string name="label_support_agent_novisit">Collection agent not visiting</string>
    <string name="label_support_bill_difference">Difference in monthly billing</string>
    <string name="label_support_charged_extra">Charged for unsubscribed channel</string>
    <string name="label_support_bill_double">Double billing</string>
    <string name="label_support_bill_additionalpackages">Additional packages not billed correctly</string>
    <string name="lable_base_price">Base Price</string>
    <string name="lable_tax">Tax</string>
    <string name="label_total">Total</string>
    <string name="label_enter_the_amount">Enter the Amount</string>
    <string name="label_procced_to_pay">Procced To Pay</string>
    <string name="label_first_name">First Name</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_date_of_birth">Date Of Birth</string>
    <string name="label_address">Address</string>
    <string name="label_aadhar_number">Aadhar Number</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_no_notification_yet">No Notification yet !</string>
    <string name="header_add_vendor">Add Vendor</string>
    <string name="dialog_loading">Loading...</string>
</resources>