<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_face_black_24dp"
        android:title="@string/menu_profile"
        android:visible="true"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:icon="@drawable/ic_google_alerts"
        android:title="@string/menu_notification"
        android:visible="true"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:icon="@drawable/ic_dots"
        android:title="@string/menu_support"
        android:visible="true"
        app:showAsAction="never" />
</menu>